tests/neg/i3487.scala
object Test {
  type &:[H, T] = Int
  val a: F[Int] { type X = Int &: String } = ??? // error
}
